--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,8 @@ img {
 .second-line {
   display: flex;
   align-items: center;
+  position: relative;
+  color: #404bbf;
 }
 
 .first-line::after {
@@ -149,10 +151,15 @@ img {
   position: absolute;
   width: 48px;
   height: 4px;
+  left: 0;
+  bottom: -1px;
   top: 44px;
-  background-color: #ffffff;
+  background-color: #404bbf;
   border-radius: 2px;
   margin-top: 20px;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .second-line::after {
@@ -161,15 +168,20 @@ img {
   position: absolute;
   width: 66px;
   height: 4px;
+  left: 0;
+  bottom: -1px;
   top: 44px;
-  background-color: #ffffff;
+  background-color: #404bbf;
   border-radius: 2px;
   margin-top: 20px;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
 .first-line:hover::after,
 .second-line:hover::after {
-  background-color: #404bbf;
+  transform: translateY(0%);
 } 
 
 .contact-information {
@@ -232,6 +244,7 @@ img {
   background-color: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
+
 }
 
 .modal-open-button {
@@ -273,6 +286,7 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open-button-all {
@@ -470,6 +484,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .social-list-link:hover,
@@ -503,6 +518,7 @@ img {
   border-radius: 4px;
   background-color: #ffffff;
   color: #8e8f99;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icons-customers-link:hover,
@@ -625,6 +641,7 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+
 
 .modal-close-btn {
   position: absolute;
